minor text updates

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body.custom-background { background-color: #ffffff; background-image: url("http:
                                                         	<h2></h2>
 <div class="symple-column symple-one-third symple-column-first  ">
 <h2><a href="/renovation/">Renovation</a></h2>
-<p>Building better, for people and the planet. High-minded yes, and a serious, practical aspiration.<br />
+<p>Building better, for people and the planet. High-minded, yes, and a serious, practical aspiration.<br />
 </div>
 <div class="symple-column symple-one-third symple-column-middle  ">
 <h2><a href="/home_performance/">Home Performance</a></h2>
