--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body.custom-background { background-color: #ffffff; background-image: url("http:
 </div>
 <div class="symple-column symple-one-third symple-column-middle  ">
 <h2><a href="/home_performance/">Home Performance</a></h2>
-<p>Making homes comfortable, efficient, and healthy<br />
+<p>Making homes comfortable, efficient and healthy<br />
 </div>
 <div class="symple-column symple-one-third symple-column-last  ">
 <h2><a href="/about/">About Us</a></h2>
