commented the head

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel='dns-prefetch' href='//platform-api.sharethis.com' />
     <link rel='dns-prefetch' href='//fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='//s.w.org' />
+    <!-- writing comment here-->
     <link rel="alternate" type="application/rss+xml" title="Elemental Green Homes &raquo; Feed" href="http://www.elementalgreenhomes.com/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Elemental Green Homes &raquo; Comments Feed" href="http://www.elementalgreenhomes.com/comments/feed/" />
     <script type="text/javascript">
