--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel='dns-prefetch' href='//fonts.googleapis.com/' />
     <link rel='dns-prefetch' href='//s.w.org' />
     <!-- writing comment here-->
-    <link rel="alternate" type="application/rss+xml" title="Elemental Green Homes &raquo; Feed" href="http://www.elementalgreenhomes.com/feed/" />
+    <link type="application/rss+xml" rel="alternate" title="Elemental Green Homes &raquo; Feed" href="http://www.elementalgreenhomes.com/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Elemental Green Homes &raquo; Comments Feed" href="http://www.elementalgreenhomes.com/comments/feed/" />
     <script type="text/javascript" class="foo">
         window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/2.2.1\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/2.2.1\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "http:\/\/www.elementalgreenhomes.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.7.11" } };
